# SystemRestauracji

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  GetData.cpp  GetData.h  README.md  Restaurant.cpp  Restaurant.h  UserData.cpp  UserData.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowloggedin.cpp  mainwindowloggedin.h  mainwindowloggedin.ui  projektPROI2
backend/: .env  .gitignore  index.js  package-lock.json  package.json
backend/controllers/: clientController.js  employeesController.js  mealsController.js  orderController.js  signingController.js  taskController.js
backend/models/: employeesModel.js  ingredientModel.js  mealsModel.js  orderModel.js  signingModel.js  taskModel.js
backend/routes/: clientRoute.js  employeeRoute.js  mealsRoute.js  orderRoute.js  signingRoute.js  taskRoute.js
client/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Client.cpp  Client.h  cmake_install.cmake
data/: CMakeLists.txt  Data.cpp  Data.h  GetData.cpp  GetData.h  PostData.cpp  PostData.h
employees/: CMakeLists.txt  Chef.cpp  Cook.cpp  Employee.cpp  Employee.h  Janitor.cpp  Supplier.cpp  Task.cpp  Task.h  Waiter.cpp  cmake_install.cmake  exception.cpp
meals/: CMakeLists.txt  CTestTestfile.cmake  Ingredient.cpp  Ingredient.h  Mainmeal.h  Meal.cpp  Meal.h  cmake_install.cmake  drink.cpp  drink.h  main.cpp  mainmeal.cpp  sauce.cpp  sauce.h
orders/: CMakeLists.txt  CTestTestfile.cmake  FamilyOrder.cpp  FamilyOrder.h  Order.cpp  Order.h  cmake_install.cmake
projektPROI2_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
projektPROI2_autogen/include/: ui_mainwindow.h
tests/: .gitignore  CMakeLists.txt  Makefile  client_tests.cpp  cmake_install.cmake  data_tests.cpp  employee_tests.cpp  meal_tests.cpp  order_test.cpp  order_tests.cpp  restaurant_tests.cpp  tests.cpp  tests_run  tests_run5
ui/: .gitignore  CMakeLists.txt  Makefile  addingredient.cpp  addingredient.h  addingredient.ui  addnewdrinksauce.cpp  addnewdrinksauce.h  addnewdrinksauce.ui  addnewmeal.cpp  addnewmeal.h  addnewmeal.ui  addtasks.cpp  addtasks.h  addtasks.ui  clientdetails.cpp  clientdetails.h  clientdetails.ui  cmake_install.cmake  mainwindow.cpp  mainwindowloggedin.cpp  mainwindowloggedin.h  mainwindowloggedin.ui  mainwindowloggedinclient.cpp  mainwindowloggedinclient.h  mainwindowloggedinclient.ui  mealdetails.cpp  mealdetails.h  mealdetails.ui  mealsediting.cpp  mealsediting.h  mealsediting.ui  orderdetails.cpp  orderdetails.h  orderdetails.ui  ordersediting.cpp  ordersediting.h  ordersediting.ui  signup.cpp  signup.h  (+16 more)
ui/projektPROI2_ui_autogen/: mocs_compilation.cpp
ui/projektPROI2_ui_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d  moc_mainwindowloggedin.cpp  moc_mainwindowloggedin.cpp.d
ui/projektPROI2_ui_autogen/include/: ui_mainwindow.h  ui_mainwindowloggedin.h
